UX: Fix spacing between banners

--- a/app/assets/javascripts/mieducacion/stylesheets/components/_banners.scss
+++ b/app/assets/javascripts/mieducacion/stylesheets/components/_banners.scss
@@ -5,7 +5,7 @@
 .global-notice {
     max-width: 1150px !important;
     border-radius: 0;
-    @apply px-4 py-4 bg-white mx-auto
+    @apply px-4 py-4 bg-white mx-auto mt-4
 }
 
 #site-banner {
